--- a/lab2/intro.tex
+++ b/lab2/intro.tex
@@ -1,14 +1,19 @@
 \section{Introduction} 
 \label{sec:intro}
+Today people take Internet and being connected for granted. It is such a common part of our everyday life that if Internet would stop working tomorrow many experts claim that it would result in a societal disaster. (Danny Hillis ref) Everyone can use Internet, it is very convenient and user-friendly. What people seem to forget is that the Internet is NOT secure. Without proper protection it is very easy for an attacker to gain access to a private network. A first perimeter of defense against attackers would be to implement a firewall. A firewall help protect against attackers by denying them access and blocking security holes in your system that attackers could exploit.
 
-\inlinetodo{This section shall introduce the reader to the subject. It should include the purpose of the report, 
-i.e. a formulation of the problem to which the report provides an answer. 
-\newline
-~\ \newline
-The last paragraph should explain the structure of the report, e.g., The 
-rest of the report is organized as follows: Section~\ref{sec:setup} 
-provides\ldots\nocite{*}}
+This report is written to formulate and describe the problems and thoughts about how to set up a firewall using iptables on a Linux Redhat system. The purpose of this report is to introduce the reader to security threats and how these threats can partially be prevented using a firewall. It also aims to present the results obtained from the laboratory work done with iptables on Chalmers Linux Redhat systems. The configurations and thoughts about this laboratory work will also be presented.
 
-\inlinetodo{If you need information on \LaTeX, \citep{latex-wikibook} is a 
-good place to start\ldots}
+The rest of the report is organized as follows: Section 2 presents the system configuration and requirements. Section 3 presents the firewall configuration done by the writers of this report. Section 4 aims to present reasoning as to why the specific configuration is correct. Section 5 provides some discussion regarding the firewall configuration, raising questions such as 'what could be done different?'. Section 6 presents the conclusions obtained from this labs and reflections upon the subject of firewalls.
+
+%\inlinetodo{This section shall introduce the reader to the subject. It should include the purpose of the report, 
+%i.e. a formulation of the problem to which the report provides an answer. 
+%\newline
+%~\ \newline
+%The last paragraph should explain the structure of the report, e.g., The 
+%rest of the report is organized as follows: Section~\ref{sec:setup} 
+%provides\ldots\nocite{*}}
+
+%\inlinetodo{If you need information on \LaTeX, \citep{latex-wikibook} is a 
+%good place to start\ldots}
 
