Added author names and group number.

--- a/lab2/report.tex
+++ b/lab2/report.tex
@@ -121,8 +121,8 @@ firstinits=true]{biblatex}
 % Title and Authors. This should be updated by you!
 \title{The Linux Firewall}
 \report{Laboratory Report in EDA491/DIT071 Computer Security}
-\author{Author 1\\Author 2}
-\group{XX}
+\author{Simon Fransson\\Henrik Hugo}
+\group{12}
 \date{\today}
 \version{0.1}
 
