Added the bibliography.

--- a/lab2/report.tex
+++ b/lab2/report.tex
@@ -127,7 +127,7 @@ firstinits=true]{biblatex}
 \version{0.1}
 
 % The bilbiography to include
-\addbibresource{report.bib}
+\addbibresource{mybib.bib}
 
 
 \begin{document}
@@ -147,7 +147,6 @@ firstinits=true]{biblatex}
 \input{conclusion}
 \newpage
 
-
 \printbibliography
 \addcontentsline{toc}{section}{References}
 
@@ -155,7 +154,6 @@ firstinits=true]{biblatex}
 information please check: 
 \burl{http://www.lib.unimelb.edu.au/cite/ieee/index.html}. References can 
 easily be managed with the program \texttt{JabRef}.}
-
 \appendix
 \newpage
 \input{init-config}
