Added some verbatim to word 'iptables'

--- a/lab2/intro.tex
+++ b/lab2/intro.tex
@@ -2,7 +2,7 @@
 \label{sec:intro}
 Today people take Internet and being connected for granted. It is such a common part of our everyday life that if Internet would stop working tomorrow many experts claim that it would result in a societal disaster as Danny Hillis speaks of in his TED talk \cite{hillis13}. This is also why it is very important to keep the systems that depend on Internet secure. Otherwise malicious users can launch attacks on these systems. Everyone can use Internet, it is very convenient and user-friendly. What people seem to forget is that the Internet is NOT secure. Without proper protection it is very easy for an attacker to gain access to a private network. A first perimeter of defense against attackers would be to implement a firewall. A firewall help protect against attackers by denying them access and blocking security holes in your system that attackers could exploit.
 
-This report is written to formulate and describe the problems and thoughts about how to set up a firewall using iptables on a Linux Redhat system. The purpose of this report is to introduce the reader to security threats and how these threats can partially be prevented using a firewall. It also aims to present the results obtained from the laboratory work done with iptables on Chalmers Linux Redhat systems. The configurations and thoughts about this laboratory work will also be presented.
+This report is written to formulate and describe the problems and thoughts about how to set up a firewall using iptables on a Linux Redhat system. The purpose of this report is to introduce the reader to security threats and how these threats can partially be prevented using a firewall. It also aims to present the results obtained from the laboratory work done with \verb;iptables; on Chalmers Linux Redhat systems. The configurations and thoughts about this laboratory work will also be presented.
 
 The rest of the report is organized as follows: Section 2 presents the system configuration and requirements. Section 3 presents the firewall configuration done by the writers of this report. Section 4 aims to present reasoning as to why the specific configuration is correct. Section 5 provides some discussion regarding the firewall configuration, raising questions such as 'what could be done different?'. Section 6 presents the conclusions obtained from this labs and reflections upon the subject of firewalls.
 
