Added a preliminary conclusion.

--- a/lab2/conclusion.tex
+++ b/lab2/conclusion.tex
@@ -1,6 +1,8 @@
 \section{Conclusion} 
 \label{sec:conclusion}
+Setting up proper security is not an easy task. It is easy to make a statement and say that a system is secure. However a system can never be secure, the real question is HOW secure the system is. The conclusions that can be drawn from the laboratory work are that a firewall is a very good first step into making a system more secure. It is fairly easy to configure with a software such as \verb;iptables;. The firewall can help in blocking unwanted incoming connections. It helps in restricting what kind of applications that are allowed, tightening up eventual security holes. As shown in the report it can also help against attacks such as ping floods and probing of ports using XMAS or NULL scans. Considering that it takes about two hours to construct a firewall that achieves this it seems very unwise to not do it.
 
+A firewall is one essential tool in minimizing security threats in your system. As shown in the report it helps not only denying access to unwanted users but can also log these attempts. It helps the administrator in observing the eventual security threats pointed towards the system. It is the first perimeter of defense and in the task of achieving a more secure system we believe it is the first thing to implement.
 \inlinetodo{Present your conclusions in relation to the objective stated in the introduction. It should not contain new information that is not discussed elsewhere in the report. }
 
 
