--- a/lab2/correctness.tex
+++ b/lab2/correctness.tex
@@ -1,6 +1,26 @@
 \section{Firewall Correctness}
 \label{sec:correctness}
 
+\subsection{Scan protection}
+Since the order matter when configuring rules in the firewall it is important to verify their intent. Even though all chains have a default policy of drop it is necessary to explicitly drop certain packats. Packets matching the pattern of common scan methods are explicitly dropped. This is stated on lines 62-66 in Appendix B. Blocking these packets before reaching any accept-rules ensures the intent of the blockage, even if they are targeting an open port in the firewall. Verifying the effectiveness of the rules was done by performing an XMAS- and NULL-scan against the host using the NMAP tool. The scan failed to detect any of our open ports thus the scan protection is working.
+
+\subsection{Loopback}
+The next rule is allowing all traffic on the loopback interface. Allowing us to reach local services without restriction. The rules are stated in lines 68-69 in Appendix B. The loopback rules were tested using a local web server running on port 80. Reaching it locally was no issue but trying from the outside failed. Thus telling us it is working as intended.
+
+\subsection{Ping flood}
+While we want to allow the outside world to ping our host we also want to limit the amount of ping requests. This was done by only accepting one ping request per second and dropping the rest. Verification was dony by sending 5 ping requests per second to the host. This resulted in a limited number of replies. We could also verify that the rules were working by seeing how many packets matched the rules in the firewall. The ping rules are stated on lines 79-80 in Appendix B.
+
+\subsection{Stateful inspection}
+It is important than the firewall allows us to initiate connections to the outside of the firewall. It is also necessary that we receive replies on connections initiaded by us, making the firewall statefull. The rules allowing this are stated on lines 82-82 in Appendix B. Testing the rules was dony by accessing google.com through a web browser. Thus ensuring that we can establish a TCP connection to google.com.
+
+\subsection{Local services}
+SSH and web-access through port 8080 was as simple as accessing the services from the outside. Assuring us that we can reach the services. Rules for the local services are stated on lines 85-88 in Appendix B.
+
+
+
+
+
+
 \inlinetodo{Explain which tool you used and how it helped you in verifying your firewall configuration. Elaborate on why the firewall is correctly configured and does what it should do. E.g., by trying the command XXX, we found that there are only YYY number of packets returned when pinging the host. Thus, the ping protection (rule Z) is working. \\
 Also answer:\\
 -- Why is the order of your firewall rules correct and makes sense?\\
