--- a/lab2/config.tex
+++ b/lab2/config.tex
@@ -3,13 +3,13 @@
 This chapter delves into the details of what the firewall configuration looked like when the lab was finished. The chapter will be divided into subchapters explaining each 'chain' such as INPUT, OUTPUT and so on.
 
 \subsection{Chain INPUT}
-This is the chain of the firewall that inspect incoming packets destined for the host. Rule number 1-3 have not been changed. From rule 4  are the new rules defined according to the firewall specification from the lab PM. The rule number 4 makes sure to accept all incoming traffic on the loopback interface. The rule can be found on line 69 in Appendix B. Rules 5-8 makes sure to drop and log all incoming traffic that comes from private/unused addresses as these may be spoofed packets. The rules can be found on lines 70-73 in Appendix B. Rule 9-10 limits the rate of incoming ICMP echo request packets to 1 packet per second. The rule is stated on line 79-80 in Appendix B. Rule 11 accepts all TCP connections that are already established or related to some other TCP connection. In other words, it makes sure that the connections which the host initiated is not dropped by the firewall. The rule can be found on line 83 in Appendix B. Rule 12-15 makes sure the firewall accepts connections for the services displayed in Table 1. Since sunrpc also accepts UDP connections there is an extra rule added for this, the rules can be found on lines 85-88 in Appendix B. Rule 16-18 makes sure to log all incoming TCP, UDP and ICMP traffic. Rules can be found on lines 90-92 in Appendix B.
+This is the chain of the firewall that inspect incoming packets destined for the host. Rule number 1-3 have not been changed. From rule 4 and onwards are the new rules defined according to the firewall specification from the lab PM. Rule number 4 makes sure to accept all incoming traffic on the loopback interface. The rule can be found on line 69 in Appendix B. Rules 5-8 makes sure to drop and log all incoming traffic that comes from private/unused addresses as these may be spoofed packets. The rules can be found on lines 70-73 in Appendix B. Rule 9-10 limits the rate of incoming ICMP echo request packets to 1 packet per second. The rule is stated on line 79-80 in Appendix B. Rule 11 accepts all TCP connections that are already established or related to some other TCP connection. In other words, it makes sure that the connections which the host initiated is not dropped by the firewall. The rule can be found on line 83 in Appendix B. Rule 12-15 makes sure the firewall accepts connections for the services displayed in Table 1. Since sunrpc also accepts UDP connections there is an extra rule added for this, the rules can be found on lines 85-88 in Appendix B. Rule 16-18 makes sure to log all incoming TCP, UDP and ICMP traffic. The rules can be found on lines 90-92 in Appendix B.
 
 \subsection{Chain OUTPUT}
 This chain inspects all outgoing packets sent from the host. Rule 1 is not changed since previously. Rule 2 accepts outoing loopback traffic, statement in script is found on line 68 in Appendix B. Rule 3-6 drop and logs all traffic sent to private/unused addresses. The statement of the rules can be found on lines 74-77 in Appendix B. Rule 7 accepts all other outgoing traffic, definition in the script can be found on line 82.
 
 \subsection{Chain LOG\_DROP}
-This chain was created only to achieve a clean and more readable script, the number of script lines would otherwise doubled (since one line for DROP and one line for LOG would have been required). The chain simply logs and then drops the packets that enter the chain. Definition can be found on lines 53-55.
+This chain was created only to achieve a clean and more readable script, the number of script lines would have otherwise been doubled (since one line for DROP and one line for LOG would have been required). The chain simply logs and then drops the packets that enter the chain. Definition can be found on lines 53-55.
 
 \lstinputlisting[caption=Final firewall 
 configuration,label=lst:fw-config]{firewall-final.txt}
