Small page layout fix

--- a/lab2/correctness.tex
+++ b/lab2/correctness.tex
@@ -15,7 +15,7 @@ While we want to allow the outside world to ping our host we also want to limit 
 It is important than the firewall allows us to initiate connections to the outside of the firewall. It is also necessary that we receive replies on connections initiated by us, making the firewall stateful. The rules allowing this are stated on lines 82-82 in Appendix B. Testing the rules was done by accessing google.com through a web browser. Thus ensuring that we can establish a TCP connection to google.com.
 
 \subsection{Local services}
-Testing SSH and web-access through port 8080 was as simple as accessing the services from the outside. Assuring us that we can reach the services. Rules for the local services are stated on lines 85-88 in Appendix B.
+Testing SSH and web-access through port 8080 was as simple as accessing the services from the outside. Rules for the local services are stated on lines 85-88 in Appendix B.
 
 
 
