Fixed their fail on 'Computer Security'

--- a/lab2/report.tex
+++ b/lab2/report.tex
@@ -120,7 +120,7 @@ firstinits=true]{biblatex}
 
 % Title and Authors. This should be updated by you!
 \title{The Linux Firewall}
-\report{Laboratory Report in EDA491/DIT071 Computer Security}
+\report{Laboratory Report in EDA491/DIT071 Network Security}
 \author{Simon Fransson\\Henrik Hugo}
 \group{12}
 \date{\today}
