Fixed according to feedback.

--- a/lab2/answers.tex
+++ b/lab2/answers.tex
@@ -43,7 +43,7 @@ items \texttt{IN}, \texttt{OUT}, \texttt{SRC}, \texttt{DST} and \texttt{PROTO}
 mean and why these might be useful.}
 ~\ \\
 
-IN and OUT denotes on what physical interface the packet entered and/or exited. SRC and DST represents the source and destination ip addresses respectively. PROTO is the protocol used on the network layer. This can be either TCP or UDP. (Table??)
+IN and OUT denotes on what physical interface the packet entered and/or exited. SRC and DST represents the source and destination ip addresses respectively. PROTO is the protocol used on the network layer. This can be either TCP or UDP.
 ~\ \\
 
 \noindent \textbf{Q4. At this stage, with default policy set to DROP for all 
