--- a/lab2/final-config.tex
+++ b/lab2/final-config.tex
@@ -4,4 +4,4 @@
 The final configuration script of the firewall is shown in
 Listing~\ref{lst:fw-final-script}.
 
-\lstinputlisting[caption=Final firewall configuration script,label=lst:fw-final-script]{firewall-final.sh}
+\lstinputlisting[caption=Final firewall configuration script,label=lst:fw-final-script, captionpos=b]{firewall-final.sh}
