--- a/lab2/init-config.tex
+++ b/lab2/init-config.tex
@@ -4,4 +4,4 @@ The initial configuration script of the firewall is shown in
 Listing~\ref{lst:fw-init-script}.
 
 \lstinputlisting[caption=Initial firewall 
-configuration script,label=lst:fw-init-script]{firewall-init.sh}
+configuration script,label=lst:fw-init-script, captionpos=b]{firewall-init.sh}
