--- a/lab2/init-firewall.tex
+++ b/lab2/init-firewall.tex
@@ -3,4 +3,4 @@
 The initial configuration script of the firewall is shown in
 Listing~\ref{lst_fs-init}.
 
-\lstinputlisting[caption=Initial firewall configuration,label=lst:fw-init,]{firewall-init.sh}
+\lstinputlisting[caption=Initial firewall configuration,label=lst:fw-init, captionpos=b]{firewall-init.sh}
